Navbar alignment fix in header

--- a/src/components/headerComponent/Header.css
+++ b/src/components/headerComponent/Header.css
@@ -2,6 +2,10 @@
     border-radius: 0px 0px 15px 15px;
 }
 
+.navbar-nav {
+    align-items: center;
+}
+
 
 .navbar-bgcolor {
     background: linear-gradient(90deg, #6a11cb, #2575fc);
